--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hello, my name is Tom 🤡</h1>
-        <img src="images/profile.jpg" class="img-circle" width="100px" alt="Tom Legras">
+        <img src="images/Profile.jpg" class="img-circle" width="100px" alt="Tom Legras">
         <p>
           I am fascinated by the world around us. I like to dream, to think for myself, and intend to live a thousand and one lives during mine.
         </p>
